# GameNative

./: .gitignore  README.md
.github/workflows/: pluvia-pr-check.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: steamagent.tzst
app/src/main/assets/inputcontrols/profiles/: controls-1.icp  controls-2.icp  controls-4.icp  controls-5.icp  controls-6.icp  controls-7.icp
app/src/main/cpp/extras/: CMakeLists.txt  alsa_client.c  vulkan.c  vulkan.cpp
app/src/main/java/app/gamenative/: MainActivity.kt  PluviaApp.kt  PrefManager.kt
app/src/main/java/app/gamenative/data/: ConfigInfo.kt  DownloadInfo.kt  GOGCloudSavesLocation.kt  GOGGame.kt  LibraryItem.kt
app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
app/src/main/java/app/gamenative/di/: DatabaseModule.kt
app/src/main/java/app/gamenative/enums/: Marker.kt
app/src/main/java/app/gamenative/events/: AndroidEvent.kt
app/src/main/python/gogdl/: api.py  args.py  auth.py  cli.py
app/src/main/python/gogdl/dl/: dl_utils.py  progressbar.py
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
docs/: PROTON_FILE_STRUCTURE_REFERENCE.md
gradle/: libs.versions.toml
(+115 files in other folders)
